<resources>
    <string name="app_name">UberRiderClone</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="let_s_start_with_creating_your_account">Let\'s start with creating your account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>